--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,17 @@
 *{
-    font-family: 'Newsreader', serif;}
+    font-family: 'Newsreader', serif;
+    scroll-behavior: smooth;
+}
 .main{
     margin: 0;
     padding: 0;
     background-image:url(/images/landing.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 170vh;
+    /* height: 300vh; */
     background-attachment: fixed;
     background-position: center;
   }
-/* @keyframes example {
-    0%   {left:0px; top:0px;}
-    25%  {left:400px; top:0px;}
-    /* 50%  {left:400px; top:200px;} */
-    /* 75%  {left:0px; top:200px;} */
-    /* 100% {left:0px; top:0px;} */
-  /* } 
-/* img {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    animation-name: example;
-    animation-duration: 4s;
-    animation-delay: -2s;
-    animation-iteration-count: 4;
-    animation-direction: alternate;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in-out;
-} */
 .mained{
     font-size: 20px;
     color: white;
@@ -41,13 +24,14 @@
 }
 
 .navbar{
+    position: fixed;
     padding-top: 30px;
     padding-left: 65%;
     background-color: transparent;
 }
 nav ul li a{
     text-decoration: none;
-    color: rgb(49, 202, 212);
+    color: rgb(9, 181, 194);
 }
 nav ul li a:hover{
     color: black;
@@ -94,16 +78,34 @@ ul li{
     display: flex;
 }
 .mainImg{
-    padding-top: 40px;
-    padding-left: 92px;
+    padding-top: 60px;
+    margin-left: 132px;
 }
-/* HOME AND ABOUT PAGE */
-.home{
-    padding-left: 70px;
-    padding-right: 70px;
-    padding-top: 40px;
-    display: flex;
-    justify-content: space-around;
+#mainH{
+    animation-duration: 4s;
+    animation-name: slidein;
+    /* animation-iteration-count: infinite; */
+    animation-direction: alternate;
+}
+@keyframes slidein{
+    from{
+        margin-top: 100%;
+        width: 300%;
+    }
+    to{
+        margin-top: 0%;
+        width: 100%;
+    }
+}
+/*ABOUT PAGE */
+#quote{
+    font-family: 'Comfortaa', cursive;
+}
+#abt_footer{
+    background-image: url(/images/land.jpg);
+    color: white;
+    height: 50vh;
+    background-size: cover ;
 }
 #image1{
     width: 400px;
@@ -111,105 +113,121 @@ ul li{
 .word1{
     padding-top: 30px;
 }
-.about{
-    padding-top: 40px;
-}
-.ecucation{
-    display: grid;
-    grid-template-columns: 500px,500px;
-    grid-auto-rows: minmax(1fr,auto);
-    grid-gap: 20px;
-}
-#graduate2{
+#graduate1{
     width: 400px;
-    height: 400px;
+    height: 300px;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+}
+.abt{
+    display: flex;
+}
+.about{
+    margin-top: 90px;
+    background-image: url(/images/land3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* BLOGS PAGE */
-#blogs_icon{
-    padding-left: 90px;
-    width: 150px;
-    height: 100px;
+#blog1Img{
+    /* padding-top: 10px; */
+    height: 240px;
+    width: 300px;
+    padding-left: 15px;
 }
-.part1{
-    padding-top: 40px;
-    display: flex;
+.wrapper{
+    margin-top: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 2px solid rgb(49, 202, 212);
+    padding-top: 50px;
+    padding-right: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+   color: white;
 
 }
-
-#blogImage{
-    padding-right: 30px;
-    padding-left: 100px;
-    width: 650px;
-    height: 450px;
-}
-.blogword{
-    padding-top: 100px;
-    padding-right: 80px;
-    padding-left: 80px;
-
-}
-.blogs{
-    text-align: center;
-    padding-top: 10px;
-}
-.blogImg{
-    width: 200px;
-    height: 200px;
-}
-.card{
-    border-bottom-color: #472604;
-    border-bottom-width: 2px;
-}
-.row{
-    padding-top: 40px;
-}
-.first{
-    margin-left: 70px;
-}
-.last{
-    margin-right: 70px;
-}
-.middle{
-    margin-left: 30px;
-}
-h5{
-    padding-top: 30px;
-}
-.read_btn{
-    margin-top: 40px;
-    margin-left: 40%;
-    border: 2px solid #472604;
-    padding-left: 40px;
-    padding-right: 40px;
+.bordered{
     border-radius: 5px;
-    background-color: #472604;
-    color: white;
-    font-weight: 60px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-}
-#books{
-    padding-left: 13%;
-    padding-top: 60px;
-}
-.footer{
-    background-color: rgb(17, 37, 37);
-    background-position: center;
-    margin: 0;
-    padding: 50px;
-    height: 50vh;
-}
-.form{
+    margin-top: 20px;
     display: flex;
-    flex-direction: column;
+    width: 510px;
+    border: 0.1px solid grey;
+    margin-left: 20px;
+    height: 370px;
+    margin-left: 10px;
+}
+.container{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr ;
+    grid-template-rows: 1fr 1fr ;
+}
+.descrption{
+    padding-left: 10px;
+}
+
+#viewButton{
+    margin-left: 80px;
+    border: 2px solid black;
+    padding: 6px;
+    background-color: rgb(49, 202, 212);
+}
+
+/* footer section */
+.footer{
+    margin-top: 50px;
+    display: flex;
     margin-left: 50px;
     margin-right: 50px;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 120px;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 70px;
 }
 input{
-    width: 30%;
-    
+    color: white;
+    width: 100%;
+    height: 10vh;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.397);
+    /* padding: 15px; */
+}
+.form{
+    padding-left: 600px;
+
+}
+         
+#subscribe{
+    margin-top: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-left: 35%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 7px;
+    background-color: rgb(49, 202, 212);
+    color: black;
+}
+.icons{
+    color: white;
+    height: 20px;
+    margin-left: 60%;
+    margin-top: 20px;
+}
+
+.contact{
+    color: white;
+}
+#follow{
+    color: white;    
+}
+
+
+
+#title1{
+    padding-left: 40%;
+    padding-top: 40px;
+
 }
